--- a/packages/index.html
+++ b/packages/index.html
@@ -52,7 +52,7 @@ title: Aura 3.x Packages
 <dt>1.5. <a href="/packages/Aura.Router/custom-maps.html#1.5">Custom Maps</a></dt>
 <dd><dl>
 <dt>1.5.1. <a href="/packages/Aura.Router/custom-maps.html#1.5.1">Extending the Map Class</a></dt>
-<dt>1.5.2. <a href="/packages/Aura.Router/custom-maps.html#1.5.2">Caching Routes</a></dt>
+<dt>1.5.2. <a href="/packages/Aura.Router/custom-maps.html#1.5.2">Automated Route Caching and Building</a></dt>
 </dl></dd>
 <dt>1.6. <a href="/packages/Aura.Router/custom-matching.html#1.6">Custom Matching Rules</a></dt>
 <dd><dl>
