--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -8,73 +8,73 @@ title: Aura.Router
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">1. Aura.Router</th>
+            <th colspan="3" class="curr">2. Aura.Router</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/">Aura 3.x Packages</a></td>
+            <td class="prev"><a href="/packages/Aura.Di/config.html">Container Builder and Config Classes</a></td>
             <td class="parent">Aura 3.x Packages</th>
             <td class="next"><a href="/packages/Aura.Router/getting-started.html">Getting Started</a></td>
         </tr>
     </table>
 </nav>
 
-<h1>1. Aura.Router</h1>
+<h1>2. Aura.Router</h1>
 <dl>
-<dt>1.1. <a href="/packages/Aura.Router/getting-started.html#1.1">Getting Started</a></dt>
+<dt>2.1. <a href="/packages/Aura.Router/getting-started.html#2.1">Getting Started</a></dt>
 <dd><dl>
-<dt>1.1.1. <a href="/packages/Aura.Router/getting-started.html#1.1.1">Adding A Route</a></dt>
-<dt>1.1.2. <a href="/packages/Aura.Router/getting-started.html#1.1.2">Matching A Request To A Route</a></dt>
-<dt>1.1.3. <a href="/packages/Aura.Router/getting-started.html#1.1.3">Dispatching A Route</a></dt>
-<dt>1.1.4. <a href="/packages/Aura.Router/getting-started.html#1.1.4">Handling Failure To Match</a></dt>
+<dt>2.1.1. <a href="/packages/Aura.Router/getting-started.html#2.1.1">Adding A Route</a></dt>
+<dt>2.1.2. <a href="/packages/Aura.Router/getting-started.html#2.1.2">Matching A Request To A Route</a></dt>
+<dt>2.1.3. <a href="/packages/Aura.Router/getting-started.html#2.1.3">Dispatching A Route</a></dt>
+<dt>2.1.4. <a href="/packages/Aura.Router/getting-started.html#2.1.4">Handling Failure To Match</a></dt>
 </dl></dd>
-<dt>1.2. <a href="/packages/Aura.Router/defining-routes.html#1.2">Defining Routes</a></dt>
+<dt>2.2. <a href="/packages/Aura.Router/defining-routes.html#2.2">Defining Routes</a></dt>
 <dd><dl>
-<dt>1.2.1. <a href="/packages/Aura.Router/defining-routes.html#1.2.1">Placeholder Tokens and Default Values</a></dt>
-<dt>1.2.2. <a href="/packages/Aura.Router/defining-routes.html#1.2.2">Optional Placeholder Tokens</a></dt>
-<dt>1.2.3. <a href="/packages/Aura.Router/defining-routes.html#1.2.3">Wildcard Attributes</a></dt>
-<dt>1.2.4. <a href="/packages/Aura.Router/defining-routes.html#1.2.4">Host Matching</a></dt>
-<dt>1.2.5. <a href="/packages/Aura.Router/defining-routes.html#1.2.5">Accept Headers</a></dt>
-<dt>1.2.6. <a href="/packages/Aura.Router/defining-routes.html#1.2.6">Multiple HTTP Verbs</a></dt>
-<dt>1.2.7. <a href="/packages/Aura.Router/defining-routes.html#1.2.7">Secure Protocols</a></dt>
-<dt>1.2.8. <a href="/packages/Aura.Router/defining-routes.html#1.2.8">Non-Routable Routes</a></dt>
-<dt>1.2.9. <a href="/packages/Aura.Router/defining-routes.html#1.2.9">Authentication</a></dt>
-<dt>1.2.10. <a href="/packages/Aura.Router/defining-routes.html#1.2.10">Custom Extras</a></dt>
-<dt>1.2.11. <a href="/packages/Aura.Router/defining-routes.html#1.2.11">Default Map Route Specifications</a></dt>
+<dt>2.2.1. <a href="/packages/Aura.Router/defining-routes.html#2.2.1">Placeholder Tokens and Default Values</a></dt>
+<dt>2.2.2. <a href="/packages/Aura.Router/defining-routes.html#2.2.2">Optional Placeholder Tokens</a></dt>
+<dt>2.2.3. <a href="/packages/Aura.Router/defining-routes.html#2.2.3">Wildcard Attributes</a></dt>
+<dt>2.2.4. <a href="/packages/Aura.Router/defining-routes.html#2.2.4">Host Matching</a></dt>
+<dt>2.2.5. <a href="/packages/Aura.Router/defining-routes.html#2.2.5">Accept Headers</a></dt>
+<dt>2.2.6. <a href="/packages/Aura.Router/defining-routes.html#2.2.6">Multiple HTTP Verbs</a></dt>
+<dt>2.2.7. <a href="/packages/Aura.Router/defining-routes.html#2.2.7">Secure Protocols</a></dt>
+<dt>2.2.8. <a href="/packages/Aura.Router/defining-routes.html#2.2.8">Non-Routable Routes</a></dt>
+<dt>2.2.9. <a href="/packages/Aura.Router/defining-routes.html#2.2.9">Authentication</a></dt>
+<dt>2.2.10. <a href="/packages/Aura.Router/defining-routes.html#2.2.10">Custom Extras</a></dt>
+<dt>2.2.11. <a href="/packages/Aura.Router/defining-routes.html#2.2.11">Default Map Route Specifications</a></dt>
 </dl></dd>
-<dt>1.3. <a href="/packages/Aura.Router/attaching-route-groups.html#1.3">Attaching Route Groups</a></dt>
-<dt>1.4. <a href="/packages/Aura.Router/generating-paths.html#1.4">Generating Paths From Routes</a></dt>
+<dt>2.3. <a href="/packages/Aura.Router/attaching-route-groups.html#2.3">Attaching Route Groups</a></dt>
+<dt>2.4. <a href="/packages/Aura.Router/generating-paths.html#2.4">Generating Paths From Routes</a></dt>
 <dd><dl>
-<dt>1.4.1. <a href="/packages/Aura.Router/generating-paths.html#1.4.1">Optional Attributes</a></dt>
-<dt>1.4.2. <a href="/packages/Aura.Router/generating-paths.html#1.4.2">Wildcard Attributes</a></dt>
+<dt>2.4.1. <a href="/packages/Aura.Router/generating-paths.html#2.4.1">Optional Attributes</a></dt>
+<dt>2.4.2. <a href="/packages/Aura.Router/generating-paths.html#2.4.2">Wildcard Attributes</a></dt>
 </dl></dd>
-<dt>1.5. <a href="/packages/Aura.Router/custom-maps.html#1.5">Custom Maps</a></dt>
+<dt>2.5. <a href="/packages/Aura.Router/custom-maps.html#2.5">Custom Maps</a></dt>
 <dd><dl>
-<dt>1.5.1. <a href="/packages/Aura.Router/custom-maps.html#1.5.1">Extending the Map Class</a></dt>
-<dt>1.5.2. <a href="/packages/Aura.Router/custom-maps.html#1.5.2">Automated Route Caching and Building</a></dt>
+<dt>2.5.1. <a href="/packages/Aura.Router/custom-maps.html#2.5.1">Extending the Map Class</a></dt>
+<dt>2.5.2. <a href="/packages/Aura.Router/custom-maps.html#2.5.2">Automated Route Caching and Building</a></dt>
 </dl></dd>
-<dt>1.6. <a href="/packages/Aura.Router/custom-matching.html#1.6">Custom Matching Rules</a></dt>
+<dt>2.6. <a href="/packages/Aura.Router/custom-matching.html#2.6">Custom Matching Rules</a></dt>
 <dd><dl>
-<dt>1.6.1. <a href="/packages/Aura.Router/custom-matching.html#1.6.1">Writing A Custom Rule</a></dt>
-<dt>1.6.2. <a href="/packages/Aura.Router/custom-matching.html#1.6.2">Setting Rules Into The Container</a></dt>
+<dt>2.6.1. <a href="/packages/Aura.Router/custom-matching.html#2.6.1">Writing A Custom Rule</a></dt>
+<dt>2.6.2. <a href="/packages/Aura.Router/custom-matching.html#2.6.2">Setting Rules Into The Container</a></dt>
 </dl></dd>
-<dt>1.7. <a href="/packages/Aura.Router/other-topics.html#1.7">Other Topics</a></dt>
+<dt>2.7. <a href="/packages/Aura.Router/other-topics.html#2.7">Other Topics</a></dt>
 <dd><dl>
-<dt>1.7.1. <a href="/packages/Aura.Router/other-topics.html#1.7.1">Catchall Routes</a></dt>
-<dt>1.7.2. <a href="/packages/Aura.Router/other-topics.html#1.7.2">Logging</a></dt>
+<dt>2.7.1. <a href="/packages/Aura.Router/other-topics.html#2.7.1">Catchall Routes</a></dt>
+<dt>2.7.2. <a href="/packages/Aura.Router/other-topics.html#2.7.2">Logging</a></dt>
 </dl></dd>
 </dl>
 
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/">Prev</a></td>
+            <td class="prev"><a href="/packages/Aura.Di/config.html">Prev</a></td>
             <td class="parent"><a href="/packages/">Up</a></td>
             <td class="next"><a href="/packages/Aura.Router/getting-started.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">Aura 3.x Packages</td>
+            <td class="prev">1.8. Container Builder and Config Classes</td>
             <td class="parent">Aura 3.x Packages</td>
-            <td class="next">1.1. Getting Started</td>
+            <td class="next">2.1. Getting Started</td>
         </tr>
     </table>
 </nav>
