--- a/packages/Aura.Di/getting-started.html
+++ b/packages/Aura.Di/getting-started.html
@@ -19,8 +19,8 @@ title: Getting Started
 </nav>
 <h1 id="1.1">1.1. Getting Started</h1>
 <h2 id="1.1.1">1.1.1. Overview</h2>
-<p>The Aura.Di package provides a dependency injection container system with the
-following features:</p>
+<p>The Aura.Di package provides a serializable dependency injection container
+with the following features:</p>
 <ul>
 <li>
 <p>constructor and setter injection</p>
