--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -11,7 +11,7 @@ title: Aura.Router
             <th colspan="3" class="curr">2. Aura.Router</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/Aura.Di/config.html">Container Builder and Config Classes</a></td>
+            <td class="prev"><a href="/packages/Aura.Di/serializing.html">Serializing the Container</a></td>
             <td class="parent">Aura 3.x Packages</th>
             <td class="next"><a href="/packages/Aura.Router/getting-started.html">Getting Started</a></td>
         </tr>
@@ -67,12 +67,12 @@ title: Aura.Router
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/Aura.Di/config.html">Prev</a></td>
+            <td class="prev"><a href="/packages/Aura.Di/serializing.html">Prev</a></td>
             <td class="parent"><a href="/packages/">Up</a></td>
             <td class="next"><a href="/packages/Aura.Router/getting-started.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">1.8. Container Builder and Config Classes</td>
+            <td class="prev">1.9. Serializing the Container</td>
             <td class="parent">Aura 3.x Packages</td>
             <td class="next">2.1. Getting Started</td>
         </tr>
