--- a/packages/Aura.Di/index.html
+++ b/packages/Aura.Di/index.html
@@ -50,6 +50,7 @@ title: Aura.Di
 </dl></dd>
 <dt>1.7. <a href="/packages/Aura.Di/factories.html#1.7">Instance Factories</a></dt>
 <dt>1.8. <a href="/packages/Aura.Di/config.html#1.8">Container Builder and Config Classes</a></dt>
+<dt>1.9. <a href="/packages/Aura.Di/serializing.html#1.9">Serializing the Container</a></dt>
 </dl>
 
 <nav class="navfooter">
