--- a/packages/Aura.Di/constructor.html
+++ b/packages/Aura.Di/constructor.html
@@ -39,6 +39,10 @@ class Example
 <pre><code class="language-php">$di-&gt;params['Vendor\Package\Example']['foo'] = 'foo_value';
 $di-&gt;params['Vendor\Package\Example']['bar'] = 'bar_value';
 </code></pre>
+<p>We can also specify by position:</p>
+<pre><code class="language-php">$di-&gt;params['Vendor\Package\Example'][0] = 'foo_value';
+$di-&gt;params['Vendor\Package\Example'][1] = 'bar_value';
+</code></pre>
 <p>Now when we create an object with <code>$di-&gt;newInstance('Vendor\Package\Example')</code>, the instantiation will work correctly. Each time we create an instance through the <em>Container</em>, it will apply the <code>$di-&gt;params</code> values for the matching class.</p>
 
 <nav class="navfooter">
