--- a/packages/Aura.Di/inheritance.html
+++ b/packages/Aura.Di/inheritance.html
@@ -18,8 +18,8 @@ title: Class, Interface, and Trait Inheritance
     </table>
 </nav>
 <h1 id="1.4">1.4. Class, Interface, and Trait Inheritance</h1>
-<p>Whether by constructor parameters or setter methods, each class instantiated through the <em>Container</em> "inherits" the values of its parents by default. This means we can set a constructor parameter or setter method value on a parent class, and the child class will use it (that is, unless we set an overriding value on the child class).</p>
-<h2 id="1.4.1">1.4.1. Constructor Parameter Inheritance</h2>
+<h2 id="1.4.1">1.4.1. Class Inheritance</h2>
+<p>Each class instantiated through the <em>Container</em> "inherits" the constrctor parameter and setter method values of its parents by default. This means we can specify a constructor parameter or setter method value on a parent class, and the child class will use it (that is, unless we set an overriding value on the child class).</p>
 <p>Let's say we have this parent class and this child class:</p>
 <pre><code class="language-php">class ExampleParent
 {
@@ -47,20 +47,25 @@ class ExampleChild extends ExampleParent
     }
 }
 </code></pre>
-<p>We can specify the default values for every class that extends <em>ExampleParent</em> through the <code>$di-&gt;params</code> and <code>$di-&gt;setter</code> values for the <em>ExampleParent</em>.</p>
+<p>If we define the constructor parameters and setter method values for the parent ...</p>
 <pre><code class="language-php">$di-&gt;params['ExampleParent']['foo'] = 'parent_foo';
 $di-&gt;setter['ExampleParent']['setBar'] = 'parent_bar';
 </code></pre>
-<p>When we call <code>$di-&gt;newInstance('ExampleChild')</code>, the child class will have inherited the defaults from the parent.</p>
-<p>We can always override the inherited values by specifying them for the child class directly:</p>
+<p>... then when we call <code>$di-&gt;newInstance('ExampleChild')</code>, the child class will "inherit" those values as defaults.</p>
+<p>We can always override the "inherited" values by specifying them for the child class directly:</p>
 <pre><code class="language-php">$di-&gt;params['ExampleChild']['foo'] = 'child_foo';
 $di-&gt;setter['ExampleChild']['setBaz'] = 'child_baz';
 </code></pre>
-<p>Note that classes extended from the child class will then inherit those new values. In this way, constructor parameter and setter method values are propagated down the inheritance hierarchy.</p>
-<h2 id="1.4.2">1.4.2. Setter Method Inheritance</h2>
-<p>If a class uses a setter method, whether by extending a parent class, using a trait, or implementing an interface, we can specify the default value for that setter method in relation to the parent class, trait, or interface. That value will then be applied by default in every class that extends that parent class, uses that trait, or implements that interface.</p>
-<p>For example, let's say we have this trait, interface, and class:</p>
-<pre><code class="language-php">trait ExampleFooTrait
+<p>Classes extended from the child class will then inherit those new values. In this way, constructor parameter and setter method values are propagated down the inheritance hierarchy.</p>
+<h2 id="1.4.2">1.4.2. Interface And Trait Inheritance</h2>
+<p>If a class exposes a setter method by implementing an interface or using a trait, we can specify the default value for that setter method on the interface or trait. That value will then be applied by default to every class that extends that implements that interface or uses that trait.</p>
+<p>For example, let's say we have this interface, trait, and class:</p>
+<pre><code class="language-php">interface ExampleBarInterface
+{
+    public function setBar($bar);
+}
+
+trait ExampleFooTrait
 {
     public function setFoo($foo)
     {
@@ -68,12 +73,7 @@ $di-&gt;setter['ExampleChild']['setBaz'] = 'child_baz';
     }
 }
 
-interface ExampleBarInterface
-{
-    public function setBar($bar);
-}
-
-class ExampleWithTraitAndInterface implements ExampleBarInterface
+class Example implements ExampleBarInterface
 {
     use ExampleFooTrait;
 
@@ -86,11 +86,11 @@ class ExampleWithTraitAndInterface implements ExampleBarInterface
     }
 }
 </code></pre>
-<p>We then define the default setter method values on the trait and interface:</p>
+<p>We can define the default setter method values on the trait and interface:</p>
 <pre><code class="language-php">$di-&gt;setter['ExampleFooTrait']['setFoo'] = 'foo_value';
 $di-&gt;setter['ExampleBarInterface']['setBar'] = 'bar_value';
 </code></pre>
-<p>When we call <code>$di-&gt;newInstance('ExampleWithTraitAndInterface')</code>, those setter methods will be called by the <em>Container</em> with those values.</p>
+<p>When we call <code>$di-&gt;newInstance('Example')</code>, those setter methods will be called by the <em>Container</em> with those values.</p>
 <p>Note that if we have class-specific <code>$di-&gt;setter</code> values, those will take precedence over the trait and interface setter values.</p>
 
 <nav class="navfooter">
