--- a/packages/index.html
+++ b/packages/index.html
@@ -32,8 +32,8 @@ title: Aura 3.x Packages
 <dt>1.3. <a href="/packages/Aura.Di/setter.html#1.3">Setter Injection</a></dt>
 <dt>1.4. <a href="/packages/Aura.Di/inheritance.html#1.4">Class, Interface, and Trait Inheritance</a></dt>
 <dd><dl>
-<dt>1.4.1. <a href="/packages/Aura.Di/inheritance.html#1.4.1">Constructor Parameter Inheritance</a></dt>
-<dt>1.4.2. <a href="/packages/Aura.Di/inheritance.html#1.4.2">Setter Method Inheritance</a></dt>
+<dt>1.4.1. <a href="/packages/Aura.Di/inheritance.html#1.4.1">Class Inheritance</a></dt>
+<dt>1.4.2. <a href="/packages/Aura.Di/inheritance.html#1.4.2">Interface And Trait Inheritance</a></dt>
 </dl></dd>
 <dt>1.5. <a href="/packages/Aura.Di/services.html#1.5">Services</a></dt>
 <dt>1.6. <a href="/packages/Aura.Di/lazy.html#1.6">Lazy Injection</a></dt>
