organize packages by branch

--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@ active: home
 </div>
 
 <div class="row">
-    <div class="span12">
-        <table id="packages">
-            <thead><tr>
-                <th>Package</th>
-                <th>Description</th>
-            </tr></thead>
-        </table>
+    <div class="span12" id="packages">
         <script src="/js/packages.js" type="text/javascript"></script>
     </div>
 </div>
