update aura.di docs

--- a/packages/Aura.Di/config.html
+++ b/packages/Aura.Di/config.html
@@ -13,7 +13,7 @@ title: Container Builder and Config Classes
         <tr>
             <td class="prev"><a href="/packages/Aura.Di/factories.html">Instance Factories</a></td>
             <td class="parent">1. Aura.Di</th>
-            <td class="next"><a href="/packages/Aura.Di/serializing.html">Serializing the Container</a></td>
+            <td class="next"><a href="/packages/Aura.Di/auto.html">Auto-Resolution Of Constructor Parameters</a></td>
         </tr>
     </table>
 </nav>
@@ -75,12 +75,12 @@ class Config extends ContainerConfig
         <tr>
             <td class="prev"><a href="/packages/Aura.Di/factories.html">Prev</a></td>
             <td class="parent"><a href="/packages/Aura.Di/">Up</a></td>
-            <td class="next"><a href="/packages/Aura.Di/serializing.html">Next</a></td>
+            <td class="next"><a href="/packages/Aura.Di/auto.html">Next</a></td>
         </tr>
         <tr>
             <td class="prev">1.7. Instance Factories</td>
             <td class="parent">1. Aura.Di</td>
-            <td class="next">1.9. Serializing the Container</td>
+            <td class="next">1.9. Auto-Resolution Of Constructor Parameters</td>
         </tr>
     </table>
 </nav>
