--- a/packages/Aura.Di/index.html
+++ b/packages/Aura.Di/index.html
@@ -48,7 +48,13 @@ title: Aura.Di
 </dl></dd>
 <dt>1.7. <a href="/packages/Aura.Di/factories.html#1.7">Instance Factories</a></dt>
 <dt>1.8. <a href="/packages/Aura.Di/config.html#1.8">Container Builder and Config Classes</a></dt>
-<dt>1.9. <a href="/packages/Aura.Di/serializing.html#1.9">Serializing the Container</a></dt>
+<dt>1.9. <a href="/packages/Aura.Di/auto.html#1.9">Auto-Resolution Of Constructor Parameters</a></dt>
+<dd><dl>
+<dt>1.9.1. <a href="/packages/Aura.Di/auto.html#1.9.1">Auto-Resolving From Concrete Typehints</a></dt>
+<dt>1.9.2. <a href="/packages/Aura.Di/auto.html#1.9.2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
+<dt>1.9.3. <a href="/packages/Aura.Di/auto.html#1.9.3">Auto-Resolving to Services</a></dt>
+<dt>1.9.4. <a href="/packages/Aura.Di/auto.html#1.9.4">Overriding Auto-Resolution</a></dt>
+</dl></dd>
 </dl>
 
 <nav class="navfooter">
