--- a/packages/Aura.Di/auto.html
+++ b/packages/Aura.Di/auto.html
@@ -20,7 +20,7 @@ title: Auto-Resolution Of Constructor Parameters
 <h1 id="1.9">1.9. Auto-Resolution Of Constructor Parameters</h1>
 <p>Some developers prefer to let the <em>Container</em> resolve dependencies on its own, without having to specify anything in a configuration file. Note that there can be unusual debugging problems inherent in tracking down the default injections, so auto-resolution may or may not be your preference.</p>
 <p>To use auto-resolution in a <em>Container</em>, build the <em>Container</em> with <code>$container = $builder-&gt;newInstance($builder::AUTO_RESOLVE)</code>.</p>
-<p>Note that auto-resolution only works for class/interface typehints. It does not work for <code>array</code> typehints. If the param is not typehinted, the <em>Container</em> will not attempt to fill in a value automatically.</p>
+<p>Note that auto-resolution only works for class/interface typehints. It does not work for <code>array</code> typehints.</p>
 <p>Note also that auto-resolution does not apply to setter methods. This is because the <em>Container</em> does not know which methods are setters and which are "normal use" methods. Since you have to specify <code>$di-&gt;setters</code> anyway, the <em>Container</em> has no chance to attempt auto-resolution.</p>
 <h2 id="1.9.1">1.9.1. Auto-Resolving From Concrete Typehints</h2>
 <p>If the parameter is typehinted to a class but there is no <code>$di-&gt;params</code> value for that parameter, and also no default value, the <em>Container</em> will automatically fill in a <code>lazyNew()</code> call to the typehinted class.</p>
@@ -52,7 +52,7 @@ title: Auto-Resolution Of Constructor Parameters
 </code></pre>
 <p>The <em>Container</em> will now resolve all <em>FooInterface</em> typehints to a lazy-new instance of <em>Foo</em>.</p>
 <blockquote>
-<p>N.b.: Tou can use <code>$di-&gt;newInstance('Foo')</code> here if you like, but that will instantiate <em>Foo</em> right then and there, and that same <em>Foo</em> insteance will be used for every <em>FooInterface</em> typehinted constructor param. That may or may not be what you want.</p>
+<p>N.b.: You can use <code>$di-&gt;newInstance('Foo')</code> here if you like, but that will instantiate <em>Foo</em> right then and there, and that same <em>Foo</em> insteance will be used for every <em>FooInterface</em> typehinted constructor param. That may or may not be what you want.</p>
 </blockquote>
 <h2 id="1.9.3">1.9.3. Auto-Resolving to Services</h2>
 <p>Sometimes you don't want a new instance of the typehinted param. Often, you will want to use a service instead.  Auto-resolving a typehint to a service is easy, using the <code>$di-&gt;types</code> technique from above.  For example, given this class ...</p>
