update package docs

--- a/packages/Aura.Router/generating-paths.html
+++ b/packages/Aura.Router/generating-paths.html
@@ -13,7 +13,7 @@ title: Generating Paths From Routes
         <tr>
             <td class="prev"><a href="/packages/Aura.Router/attaching-route-groups.html">Attaching Route Groups</a></td>
             <td class="parent">2. Aura.Router</th>
-            <td class="next"><a href="/packages/Aura.Router/custom-maps.html">Custom Maps</a></td>
+            <td class="next"><a href="/packages/Aura.Router/custom-maps.html">Building Custom Maps and Routes</a></td>
         </tr>
     </table>
 </nav>
@@ -77,7 +77,7 @@ $link = $generator-&gt;generate('wild_post', [
         <tr>
             <td class="prev">2.3. Attaching Route Groups</td>
             <td class="parent">2. Aura.Router</td>
-            <td class="next">2.5. Custom Maps</td>
+            <td class="next">2.5. Building Custom Maps and Routes</td>
         </tr>
     </table>
 </nav>
