--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -47,10 +47,11 @@ title: Aura.Router
 <dt>2.4.1. <a href="/packages/Aura.Router/generating-paths.html#2.4.1">Optional Attributes</a></dt>
 <dt>2.4.2. <a href="/packages/Aura.Router/generating-paths.html#2.4.2">Wildcard Attributes</a></dt>
 </dl></dd>
-<dt>2.5. <a href="/packages/Aura.Router/custom-maps.html#2.5">Custom Maps</a></dt>
+<dt>2.5. <a href="/packages/Aura.Router/custom-maps.html#2.5">Building Custom Maps and Routes</a></dt>
 <dd><dl>
 <dt>2.5.1. <a href="/packages/Aura.Router/custom-maps.html#2.5.1">Extending the Map Class</a></dt>
-<dt>2.5.2. <a href="/packages/Aura.Router/custom-maps.html#2.5.2">Automated Route Caching and Building</a></dt>
+<dt>2.5.2. <a href="/packages/Aura.Router/custom-maps.html#2.5.2">Extending The Route Class</a></dt>
+<dt>2.5.3. <a href="/packages/Aura.Router/custom-maps.html#2.5.3">Automated Route Caching and Building</a></dt>
 </dl></dd>
 <dt>2.6. <a href="/packages/Aura.Router/custom-matching.html#2.6">Custom Matching Rules</a></dt>
 <dd><dl>
