--- a/packages/Aura.Router/custom-maps.html
+++ b/packages/Aura.Router/custom-maps.html
@@ -1,14 +1,14 @@
 ---
 layout: site
 active: packages
-title: Custom Maps
+title: Building Custom Maps and Routes
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">2.5. Custom Maps</th>
+            <th colspan="3" class="curr">2.5. Building Custom Maps and Routes</th>
         </tr>
         <tr>
             <td class="prev"><a href="/packages/Aura.Router/generating-paths.html">Generating Paths From Routes</a></td>
@@ -17,7 +17,7 @@ title: Custom Maps
         </tr>
     </table>
 </nav>
-<h1 id="2.5">2.5. Custom Maps</h1>
+<h1 id="2.5">2.5. Building Custom Maps and Routes</h1>
 <h2 id="2.5.1">2.5.1. Extending the Map Class</h2>
 <p>You might want to extend the <em>Map</em> class to provide convenience methods specific to your application. As with writing a custom matching rule, this is a bit involved but not difficult:</p>
 <ol>
@@ -65,9 +65,63 @@ $map = $routerContainer-&gt;getMap();
 echo get_class($map); // "ResourceMap"
 ?&gt;
 </code></pre>
-<h2 id="2.5.2">2.5.2. Automated Route Caching and Building</h2>
-<p>You may wish to build your route map from some external source. Alternatively,you mighg want to cache your route map for production deployments so that you do not have to add the routes from scratch on each page load.</p>
-<p>To effect these or other automated map-building functionality, call the <code>RouterContainer::setMapBuilder()</code> method and pass a builder callable to set up the <em>Map</em> before the container returns it. The builder callable should take a <em>Map</em> instance as its only argument.</p>
+<h2 id="2.5.2">2.5.2. Extending The Route Class</h2>
+<p>Likewise, you may only need to add special parameters to the routes themselves, without needing to change the Map logic.  This too is a bit involved but not difficult:</p>
+<ol>
+<li>
+<p>Write your <em>Route</em> extended class.</p>
+</li>
+<li>
+<p>Add your extended class factory to the <em>RouterContainer</em>.</p>
+</li>
+<li>
+<p>Use the <em>RouterContainer</em> as normal, and it will use your custom <em>Route</em> for the <em>Map</em>.</p>
+</li>
+</ol>
+<p>For example, you may need to add a <code>model()</code> method that specifes the model to use with the handler. First, write your extended <em>Route</em> class:</p>
+<pre><code class="language-php">&lt;?php
+use Aura\Router\Route;
+
+class ModelRoute extends Route
+{
+    protected $model;
+
+    public function model($model)
+    {
+        $this-&gt;model = $model;
+        return $this;
+    }
+}
+?&gt;
+</code></pre>
+<p>Then tell the <em>RouterContainer</em> how to create your extended class using a factory callable:</p>
+<pre><code class="language-php">&lt;?php
+use ModelRoute;
+
+$routerContainer-&gt;setRouteFactory(function () {
+    return new ModelRoute();
+});
+?&gt;
+</code></pre>
+<p>Now you can get the <em>Map</em> from the <em>RouterContainer</em>, and it will use your custom extended route object when adding routes:</p>
+<pre><code class="language-php">&lt;?php
+$map = $routerContainer-&gt;getMap();
+$route = $map-&gt;get('foo', '/path/to/foo')-&gt;model('MyModelClass');
+echo get_class($route); // "ModelRoute"
+echo $route-&gt;model; // "MyModelClass"
+?&gt;
+</code></pre>
+<p>Because the <em>Map</em> object proxies unknown method calls to the underlying route object, your new methods will also be honored by the <em>Map</em> object to set route defaults:</p>
+<pre><code class="language-php">&lt;?php
+$map-&gt;model('DefaultModelClass');
+$route = $map-&gt;get('foo', '/path/to/foo');
+echo get_class($route); // "ModelRoute"
+echo $route-&gt;model; // "DefaultModelClass"
+?&gt;
+</code></pre>
+<h2 id="2.5.3">2.5.3. Automated Route Caching and Building</h2>
+<p>You may wish to build your route map from some external source. Alternatively, you might want to cache your route map for production deployments so that you do not have to add the routes from scratch on each page load.</p>
+<p>To effect this or other automated map-building functionality, call the <code>RouterContainer::setMapBuilder()</code> method and pass a builder callable to set up the <em>Map</em> before the container returns it. The builder callable should take a <em>Map</em> instance as its only argument.</p>
 <p>The following is a naive example for file-based caching and restoring of <em>Map</em> routes. It uses the <code>Map::setRoutes()</code> and <code>Map::getRoutes()</code> methods to work with the array of mapped route objects.</p>
 <pre><code class="language-php">&lt;?php
 $routerContainer-&gt;setMapBuilder(function ($map) {
