--- a/packages/Aura.Router/custom-matching.html
+++ b/packages/Aura.Router/custom-matching.html
@@ -11,7 +11,7 @@ title: Custom Matching Rules
             <th colspan="3" class="curr">2.6. Custom Matching Rules</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/Aura.Router/custom-maps.html">Custom Maps</a></td>
+            <td class="prev"><a href="/packages/Aura.Router/custom-maps.html">Building Custom Maps and Routes</a></td>
             <td class="parent">2. Aura.Router</th>
             <td class="next"><a href="/packages/Aura.Router/other-topics.html">Other Topics</a></td>
         </tr>
@@ -112,7 +112,7 @@ $routerContainer-&gt;setRules([
             <td class="next"><a href="/packages/Aura.Router/other-topics.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">2.5. Custom Maps</td>
+            <td class="prev">2.5. Building Custom Maps and Routes</td>
             <td class="parent">2. Aura.Router</td>
             <td class="next">2.7. Other Topics</td>
         </tr>
