--- a/packages/Aura.Di/index.html
+++ b/packages/Aura.Di/index.html
@@ -41,6 +41,7 @@ title: Aura.Di
 <dd><dl>
 <dt>1.6.2.1. <a href="/packages/Aura.Di/lazy.html#1.6.2.1">Setting</a></dt>
 <dt>1.6.2.2. <a href="/packages/Aura.Di/lazy.html#1.6.2.2">Getting</a></dt>
+<dt>1.6.2.3. <a href="/packages/Aura.Di/lazy.html#1.6.2.3">Getting-and-Calling</a></dt>
 </dl></dd>
 <dt>1.6.3. <a href="/packages/Aura.Di/lazy.html#1.6.3">Lazy Values</a></dt>
 <dt>1.6.4. <a href="/packages/Aura.Di/lazy.html#1.6.4">Lazy Include and Require</a></dt>
