--- a/packages/Aura.Router/index.html
+++ b/packages/Aura.Router/index.html
@@ -56,12 +56,13 @@ title: Aura.Router
 <dt>2.6. <a href="/packages/Aura.Router/custom-matching.html#2.6">Custom Matching Rules</a></dt>
 <dd><dl>
 <dt>2.6.1. <a href="/packages/Aura.Router/custom-matching.html#2.6.1">Writing A Custom Rule</a></dt>
-<dt>2.6.2. <a href="/packages/Aura.Router/custom-matching.html#2.6.2">Setting Rules Into The Container</a></dt>
+<dt>2.6.2. <a href="/packages/Aura.Router/custom-matching.html#2.6.2">Setting Rules</a></dt>
 </dl></dd>
 <dt>2.7. <a href="/packages/Aura.Router/other-topics.html#2.7">Other Topics</a></dt>
 <dd><dl>
 <dt>2.7.1. <a href="/packages/Aura.Router/other-topics.html#2.7.1">Catchall Routes</a></dt>
 <dt>2.7.2. <a href="/packages/Aura.Router/other-topics.html#2.7.2">Logging</a></dt>
+<dt>2.7.3. <a href="/packages/Aura.Router/other-topics.html#2.7.3">Base Path</a></dt>
 </dl></dd>
 </dl>
 
