--- a/packages/Aura.Di/setter.html
+++ b/packages/Aura.Di/setter.html
@@ -19,7 +19,8 @@ title: Setter Injection
 </nav>
 <h1 id="1.3">1.3. Setter Injection</h1>
 <p>The <em>Container</em> supports setter injection in addition to constructor injection. (These can be combined as needed.)</p>
-<p>After the <em>Container</em> constructs a new instance of an object, we can specify that certain methods should be called with certain values immediately after instantiation by using the <code>$di-&gt;setter</code> array.  Say we have class like the following:</p>
+<p>After the <em>Container</em> constructs a new instance of an object, we can specify that certain methods should be called with certain values immediately after instantiation by using the <code>$di-&gt;setter</code> array before locking it.</p>
+<p>Say we have class like the following:</p>
 <pre><code class="language-php">namespace Vendor\Package;
 
 class Example
@@ -36,6 +37,9 @@ class Example
 <pre><code class="language-php">$di-&gt;setters['Vendor\Package\Example']['setFoo'] = 'foo_value';
 </code></pre>
 <p>Note also that this works only with explicitly-defined setter methods. Setter methods that exist only via magic <code>__call()</code> will not be honored.</p>
+<blockquote>
+<p>N.b.: If you try to access <code>$setters</code> after calling <code>newInstance()</code> (or after locking the <em>Container</em> using the <code>lock()</code> method) the <em>Container</em> will throw an exception. This is to prevent modifiying the params after objects have been created. Thus, be sure to set up all params for all objects before creating an object.</p>
+</blockquote>
 
 <nav class="navfooter">
     <table>
