--- a/packages/index.html
+++ b/packages/index.html
@@ -43,6 +43,7 @@ title: Aura 3.x Packages
 <dd><dl>
 <dt>1.6.2.1. <a href="/packages/Aura.Di/lazy.html#1.6.2.1">Setting</a></dt>
 <dt>1.6.2.2. <a href="/packages/Aura.Di/lazy.html#1.6.2.2">Getting</a></dt>
+<dt>1.6.2.3. <a href="/packages/Aura.Di/lazy.html#1.6.2.3">Getting-and-Calling</a></dt>
 </dl></dd>
 <dt>1.6.3. <a href="/packages/Aura.Di/lazy.html#1.6.3">Lazy Values</a></dt>
 <dt>1.6.4. <a href="/packages/Aura.Di/lazy.html#1.6.4">Lazy Include and Require</a></dt>
@@ -96,12 +97,13 @@ title: Aura 3.x Packages
 <dt>2.6. <a href="/packages/Aura.Router/custom-matching.html#2.6">Custom Matching Rules</a></dt>
 <dd><dl>
 <dt>2.6.1. <a href="/packages/Aura.Router/custom-matching.html#2.6.1">Writing A Custom Rule</a></dt>
-<dt>2.6.2. <a href="/packages/Aura.Router/custom-matching.html#2.6.2">Setting Rules Into The Container</a></dt>
+<dt>2.6.2. <a href="/packages/Aura.Router/custom-matching.html#2.6.2">Setting Rules</a></dt>
 </dl></dd>
 <dt>2.7. <a href="/packages/Aura.Router/other-topics.html#2.7">Other Topics</a></dt>
 <dd><dl>
 <dt>2.7.1. <a href="/packages/Aura.Router/other-topics.html#2.7.1">Catchall Routes</a></dt>
 <dt>2.7.2. <a href="/packages/Aura.Router/other-topics.html#2.7.2">Logging</a></dt>
+<dt>2.7.3. <a href="/packages/Aura.Router/other-topics.html#2.7.3">Base Path</a></dt>
 </dl></dd>
 </dl></dd>
 </dl>
