add all 3.x and 2.x package docs

--- a/packages/index.html
+++ b/packages/index.html
@@ -1,46 +1,69 @@
 ---
 layout: site
 active: packages
-title: Aura 3.x Packages
+title: Aura Packages
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">Aura 3.x Packages</th>
+            <th colspan="3" class="curr">Aura Packages</th>
         </tr>
         <tr>
             <td class="prev"></td>
             <td class="parent"></th>
-            <td class="next"><a href="/packages/Aura.Di/">Aura.Di</a></td>
+            <td class="next"><a href="/packages/3.x/">Version 3.x</a></td>
         </tr>
     </table>
 </nav>
 
-<h1>Aura 3.x Packages</h1>
+<h1>Aura Packages</h1>
 <dl>
-<dt>1. <a href="/packages/Aura.Di/">Aura.Di</a></dt>
+<dt>1. <a href="/packages/3.x/">Version 3.x</a></dt>
 <dd><dl>
-<dt>1.1. <a href="/packages/Aura.Di/getting-started.html#1.1">Getting Started</a></dt>
-<dt>1.2. <a href="/packages/Aura.Di/constructor.html#1.2">Constructor Injection</a></dt>
-<dt>1.3. <a href="/packages/Aura.Di/setter.html#1.3">Setter Injection</a></dt>
-<dt>1.4. <a href="/packages/Aura.Di/inheritance.html#1.4">Class, Interface, and Trait Inheritance</a></dt>
-<dt>1.5. <a href="/packages/Aura.Di/services.html#1.5">Services</a></dt>
-<dt>1.6. <a href="/packages/Aura.Di/lazy.html#1.6">Lazy Injection</a></dt>
-<dt>1.7. <a href="/packages/Aura.Di/factories.html#1.7">Instance Factories</a></dt>
-<dt>1.8. <a href="/packages/Aura.Di/config.html#1.8">Container Builder and Config Classes</a></dt>
-<dt>1.9. <a href="/packages/Aura.Di/auto.html#1.9">Auto-Resolution Of Constructor Parameters</a></dt>
+<dt>1.1. <a href="/packages/3.x/Di/">Aura.Di</a></dt>
+<dd><dl>
+<dt>1.1.1. <a href="/packages/3.x/Di/getting-started.html#1-1-1">Getting Started</a></dt>
+<dt>1.1.2. <a href="/packages/3.x/Di/constructor.html#1-1-2">Constructor Injection</a></dt>
+<dt>1.1.3. <a href="/packages/3.x/Di/setter.html#1-1-3">Setter Injection</a></dt>
+<dt>1.1.4. <a href="/packages/3.x/Di/inheritance.html#1-1-4">Class, Interface, and Trait Inheritance</a></dt>
+<dt>1.1.5. <a href="/packages/3.x/Di/services.html#1-1-5">Services</a></dt>
+<dt>1.1.6. <a href="/packages/3.x/Di/lazy.html#1-1-6">Lazy Injection</a></dt>
+<dt>1.1.7. <a href="/packages/3.x/Di/factories.html#1-1-7">Instance Factories</a></dt>
+<dt>1.1.8. <a href="/packages/3.x/Di/config.html#1-1-8">Container Builder and Config Classes</a></dt>
+<dt>1.1.9. <a href="/packages/3.x/Di/auto.html#1-1-9">Auto-Resolution Of Constructor Parameters</a></dt>
 </dl></dd>
-<dt>2. <a href="/packages/Aura.Router/">Aura.Router</a></dt>
+<dt>1.2. <a href="/packages/3.x/Payload.html#1-2">Aura.Payload</a></dt>
+<dt>1.3. <a href="/packages/3.x/Router/">Aura.Router</a></dt>
 <dd><dl>
-<dt>2.1. <a href="/packages/Aura.Router/getting-started.html#2.1">Getting Started</a></dt>
-<dt>2.2. <a href="/packages/Aura.Router/defining-routes.html#2.2">Defining Routes</a></dt>
-<dt>2.3. <a href="/packages/Aura.Router/attaching-route-groups.html#2.3">Attaching Route Groups</a></dt>
-<dt>2.4. <a href="/packages/Aura.Router/generating-paths.html#2.4">Generating Paths From Routes</a></dt>
-<dt>2.5. <a href="/packages/Aura.Router/custom-maps.html#2.5">Building Custom Maps and Routes</a></dt>
-<dt>2.6. <a href="/packages/Aura.Router/custom-matching.html#2.6">Custom Matching Rules</a></dt>
-<dt>2.7. <a href="/packages/Aura.Router/other-topics.html#2.7">Other Topics</a></dt>
+<dt>1.3.1. <a href="/packages/3.x/Router/getting-started.html#1-3-1">Getting Started</a></dt>
+<dt>1.3.2. <a href="/packages/3.x/Router/defining-routes.html#1-3-2">Defining Routes</a></dt>
+<dt>1.3.3. <a href="/packages/3.x/Router/attaching-route-groups.html#1-3-3">Attaching Route Groups</a></dt>
+<dt>1.3.4. <a href="/packages/3.x/Router/generating-paths.html#1-3-4">Generating Paths From Routes</a></dt>
+<dt>1.3.5. <a href="/packages/3.x/Router/custom-maps.html#1-3-5">Building Custom Maps and Routes</a></dt>
+<dt>1.3.6. <a href="/packages/3.x/Router/custom-matching.html#1-3-6">Custom Matching Rules</a></dt>
+<dt>1.3.7. <a href="/packages/3.x/Router/other-topics.html#1-3-7">Other Topics</a></dt>
+</dl></dd>
+</dl></dd>
+<dt>2. <a href="/packages/2.x/">Version 2.x</a></dt>
+<dd><dl>
+<dt>2.1. <a href="/packages/2.x/Accept.html#2-1">Aura.Accept</a></dt>
+<dt>2.2. <a href="/packages/2.x/Auth.html#2-2">Aura.Auth</a></dt>
+<dt>2.3. <a href="/packages/2.x/Autoload.html#2-3">Aura.Autoload</a></dt>
+<dt>2.4. <a href="/packages/2.x/Cli.html#2-4">Aura.Cli</a></dt>
+<dt>2.5. <a href="/packages/2.x/Di.html#2-5">Aura.Di</a></dt>
+<dt>2.6. <a href="/packages/2.x/Dispatcher.html#2-6">Aura.Dispatcher</a></dt>
+<dt>2.7. <a href="/packages/2.x/Filter.html#2-7">Aura.Filter</a></dt>
+<dt>2.8. <a href="/packages/2.x/Html.html#2-8">Aura.Html</a></dt>
+<dt>2.9. <a href="/packages/2.x/Includer.html#2-9">Aura.Includer</a></dt>
+<dt>2.10. <a href="/packages/2.x/Router.html#2-10">Aura.Router</a></dt>
+<dt>2.11. <a href="/packages/2.x/Session.html#2-11">Aura Session</a></dt>
+<dt>2.12. <a href="/packages/2.x/Sql.html#2-12">Aura.Sql</a></dt>
+<dt>2.13. <a href="/packages/2.x/SqlQuery.html#2-13">Aura.SqlQuery</a></dt>
+<dt>2.14. <a href="/packages/2.x/SqlSchema.html#2-14">Aura.SqlSchema</a></dt>
+<dt>2.15. <a href="/packages/2.x/View.html#2-15">Aura View</a></dt>
+<dt>2.16. <a href="/packages/2.x/Web.html#2-16">Aura.Web</a></dt>
 </dl></dd>
 </dl>
 
@@ -49,12 +72,12 @@ title: Aura 3.x Packages
         <tr>
             <td class="prev"></td>
             <td class="parent"></td>
-            <td class="next"><a href="/packages/Aura.Di/">Next</a></td>
+            <td class="next"><a href="/packages/3.x/">Next</a></td>
         </tr>
         <tr>
             <td class="prev"></td>
             <td class="parent"></td>
-            <td class="next">1. Aura.Di</td>
+            <td class="next">1. Version 3.x</td>
         </tr>
     </table>
 </nav>
